--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,11 @@
         <li><%= link_to "Posts", root_path %></li>
         <li><%= link_to "About", about_path %></li>
       </ul>
+      <% if  !user_signed_in? %>
+        <p class="sign_in"><%= link_to "User login", new_user_session_path %></p>
+      <% end %>
 
-      <p class="sign_in">User login</p>
+
     </div>
 
     <div id="main_content">
@@ -29,10 +32,14 @@
           <%else %>
                 <%= link_to "Back to Post Feed", root_path %>
           <% end %>
-        <div class="buttons">
-          <button class="button"><%= link_to "Make Post", new_post_path %></button>
-          <button class="button">"Log Out"</button>
-        </div>
+
+          <% if user_signed_in? %>
+            <div class="buttons">
+              <button class="button"><%= link_to "Make Post", new_post_path %></button>
+              <button class="button"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></button>
+            </div>
+        <% end %>
+
       </div>
 
     <% flash.each do |name, msg| %>
